# wildfire_analysis

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  flamegraph.bash  main.exe.stackdump
.github/workflows/: c-cpp.yml  codeql.yml
analysis/: create_sql.py  find_the_same.py
data/: moisture.csv  slope.csv  wind.csv
database/: docker-compose.yaml
docs/: ER.drawio  classDiagram.drawio  dataPipeline.drawio
include/: Cell.h  CellState.h  CellStorage.h  Connection.h  Coordinates.h  Fire.h  Math.h  Metric.h  Metrics.h  ProfilingDecorator.h  Properties.h  Wind.h
parsing/: CMRParser.py  FileDownloader.py  docker-compose.yml  enableExt.sql  fires.py  main.py  readme.md  to_database.bash  utils.py
src/: CMakeLists.txt  Cell.cpp  CellStorage.cpp  Connection.cpp  Coordinates.cpp  Fire.cpp  Math.cpp  Metric.cpp  ProfilingDecorator.cpp  Wind.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
